data/derived/comb/progs/unify/prog6569.ml.out
Characters 46-59:
  |_->helper(x,n-1)::x::[];;
      ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
